@@ -577,6 +577,7 @@ pm-solar-panel-3=Solar panel 3
 pm-longer-handed-inserter=Longer-handed inserter
 pm-coil-heater=Coil heater
 pm-magnesium-fire-flame=Magnesium flame
+pm-assembling-machine-4=Assembling machine 4
 
 [entity-description]
 pm-welder=A smelting machine thats sole purpose is to produce alloys. They can only run on unique fuel.
@@ -1685,6 +1686,7 @@ pm-osmium-processing=Osmium processing
 pm-niobium-processing=Niobium processing
 pm-tantalum-processing=Tantalum processing
 pm-advanced-advanced-advanced-transition-metal-pack-unlock=Advanced advanced advanced transition metal science pack
+pm-automation-4=Automation 4
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
